# SmolPyGUI

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml
SmolPyGUI/: MANIFEST.in  core.py
examples/: example_button.py  example_textbox.py  example_ui.py
