[project]
name = "SmolPyGUI"
version = "1.64.1"
description = "A little GUI system made with pygame"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Smol", email = "kingalexander471@gmail.com"}
]
dependencies = ["pygame>=2.6.1"]
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
SmolPyGUI = ["fonts/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta" 